--- a/MaterialDialogLibrary/build.gradle
+++ b/MaterialDialogLibrary/build.gradle
@@ -1,18 +1,29 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+
+//kotlin doc generator
+apply plugin: 'org.jetbrains.dokka-android'
+//jitpack plugin
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.rahulabrol'
+group = 'com.github.rahulabrol'
+
+version = "1.1"
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    dokka {
+        outputFormat = 'html'
+        outputDirectory = "$buildDir/docs"
+    }
+
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0.0"
+        versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -35,6 +46,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Material Design Library
     implementation 'com.google.android.material:material:1.1.0'
