--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.dokkaVersion = '0.9.17'
     repositories {
         google()
         jcenter()
@@ -15,6 +16,7 @@ buildscript {
         // in the individual module build.gradle files
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokkaVersion"
     }
 }
 
